--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,9 @@
     <!-- AdminBSB Themes. You can choose a theme from css/themes instead of get all themes -->
     <link href="/css/themes/all-themes.css" rel="stylesheet" />
 
+    <!-- CSS -->
+    <!-- link rel="stylesheet" href="https://unpkg.com/react-table@latest/react-table.css" -->
+
     <title>CrmPortal</title>
   </head>
   <body class="theme-red">
@@ -72,6 +75,9 @@
 
     <!-- Waves Effect Plugin Js -->
     <script src="/plugins/node-waves/waves.js"></script>
+
+    <!-- JS -->
+    <!-- script src="https://unpkg.com/react-table@latest/react-table.js"></script -->
 
     <!-- Custom Js -->
     <script src="/js/admin.js"></script>
